--- a/03-CSS_Variables/index.html
+++ b/03-CSS_Variables/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>CSS Variables</title>
+  <title>Doge CSS</title>
 </head>
 <body>
   <h2>Update CSS Variables with <span class="js-title">Js</span></h2>
